kubernetes/apps/dev/forgejo/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejo
  annotations:
    external-dns.alpha.kubernetes.io/target: "traefik-int.ironstone.casa"
spec:
  parentRefs:
    - name: traefik-internal
      namespace: network
      sectionName: websecure
  hostnames:
    - "forgejo.ironstone.casa"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - kind: Service
          name: forgejo-http
          port: 3000
