kubernetes/apps/dev/forgejo/app/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: forgejo-ssh-node-ingress
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: forgejo
      app.kubernetes.io/name: forgejo
  ingress:
    - fromEntities:
        - host
        - remote-node
        - kube-apiserver
      toPorts:
        - ports:
            - port: "2222"
              protocol: TCP
