kubernetes/apps/dev/forgejo/app/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: forgejo
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: forgejo
      app.kubernetes.io/name: forgejo
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: network
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - port: 3000
          protocol: TCP
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
          podSelector:
            matchLabels:
              app.kubernetes.io/instance: vm
              app.kubernetes.io/name: vmagent
      ports:
        - port: 3000
          protocol: TCP
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - port: 2222
          protocol: TCP
